force-app/main/default/objects/Stakeholder__c/Stakeholder__c.object-meta.xml
<CustomObject>
    <description>Used for Opportunity Plans</description>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Stakeholder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>