force-app/main/default/objects/Stakeholder__c/fields/Buying_Role__c.field-meta.xml
<CustomField>
    <fullName>Buying_Role__c</fullName>
    <label>Buying Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>User Buyer</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>