force-app/main/default/objects/Stakeholder__c/fields/Influences_or_Is_Influenced_By__c.field-meta.xml
<CustomField>
    <fullName>Influences_or_Is_Influenced_By__c</fullName>
    <inlineHelpText>Within this list of stakeholders, who does this person have the ability to sway or influence? Who is this person influenced by?</inlineHelpText>
    <label>Influences or Is Influenced By</label>
    <type>TextArea</type>
</CustomField>