force-app/main/default/objects/Stakeholder__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Stakeholder_Name__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>